# Advanced-python-HSE

HW1/: main.py
HW2/: main.py
HW2/artifacts/: repo_link.txt  test.tex
HW2/packaging_tutorial/: setup.cfg
HW2/packaging_tutorial/src/example_package/: example.py
HW3/: main.py
HW3/artifacts/hard/: AB.txt  CD.txt
HW4/: main-medium.py  main.py
HW4/artifacts/: medium-logs.txt  medium-times.txt
HW5/: main-medium.py  main.py
HW5/artifacts_medium/: 251977367.txt  254993512.txt  263912819.txt  264975895.txt  264999713.txt  265779365.txt  266193798.txt  266195349.txt  266197207.txt  266575559.txt  266803175.txt  267491181.txt  267673188.txt  267822845.txt  267906935.txt  268047531.txt  268346514.txt  269390396.txt  269614270.txt  269750568.txt  269851286.txt  270279788.txt  270704546.txt  271131253.txt  271146886.txt  271170001.txt  271215007.txt  271470178.txt
